--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ video {
 }
 
 footer {
-  background-color: #3f704d;
+  background-color: #e41515;
   color: white;
   text-align: center;
   padding: 20px;
