--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: #3f704d;
+  background-color: #790a0a;
   color: white;
   display: flex;
   flex-wrap: wrap;
